# livin

./: .gitignore  docker-compose.yml
app/: .pre-commit-config.yaml  alembic.ini  pyproject.toml
app/alembic/versions/: 611eef58f490_start.py
app/livin/: __init__.py  depends.py  main.py  settings.py
app/livin/application/: auth.py  locations.py  users.py  voyage.py
app/livin/application/un/: auth.py  locations.py  users.py  voyage.py
app/livin/domain/model/auth/: credential.py  credential_repository.py
app/livin/domain/model/location/: errors.py  location.py  repository.py
app/livin/domain/model/user/: errors.py  repository.py  user.py
app/livin/domain/model/voyage/: repository.py  voyage.py
app/livin/domain/shared/: errors.py
app/livin/infrastructure/persistence/pg/: credential_repository.py  location.py  repository_pg.py  user.py  voyage.py
app/livin/routers/: auth.py  locations.py  users.py  voyage.py
app/resources/: start.sql
app/tests/: conftest.py  main_test.py
web/: nginx.conf
web/livin/: app.js  index.html
web/livin/components/: home.js  locations.js
web/livin/components/locations/: canvas.js  modal.js  mode.js  panel.js
web/livin/layout/: content.js  topbar.js
